# fennee

./: .gitignore  .gitmodules  Dockerfile  README.md  pwm_map.yaml
docs/: hardware.md  install_ros.md
fennee_camera/: CMakeLists.txt  fennee_camera.rosinstall  package.xml
fennee_camera/config/: detection.yaml
fennee_camera/launch/: camera.launch  detection_filter.launch  stereo_inertial_node.launch
fennee_config/: CMakeLists.txt  README.md  config.json  fennee_config.rosinstall  package.xml
fennee_config/config/ekf/: footprint_to_odom.yaml
fennee_config/config/gait/: gait.yaml
fennee_config/config/ros_control/: hardware.yaml
fennee_config/launch/: bringup.launch  gazebo.launch  laser.launch  navigate.launch  position_controllers.launch  slam.launch  spawn_robot.launch
fennee_config/launch/include/: move_base.launch
fennee_config/maps/: map.pgm
fennee_control/: CMakeLists.txt  package.xml  requirements.txt
fennee_control/config/: servos_calibration.yaml
fennee_control/launch/: imu_bno08x.launch  robot_interface.launch  servo_interface.launch
fennee_control/scripts/: imu_bno08x.py  pwm_map.yaml  servo_calibration.py  servo_interface.py
fennee_description/: CMakeLists.txt  README.md  package.xml
fennee_description/launch/: description.launch  view_urdf.launch
fennee_description/meshes/stl/: LICENSE.txt  README.txt
fennee_description/urdf/: fennee.urdf  fennee.xacro  generate_urdf.sh  stairs.urdf.xacro
fennee_micro/: platformio.ini
fennee_micro/src/: main.cpp
fennee_ros/: .fennee.repos  fennee.rosinstall
models/: README.md
models/Chassis_Side_longer/: Chassis_Side_longer.FCStd  Chassis_Side_longer.stl
models/Circuitry_Mountingplate_jetson_nano/: Circuitry_Mountingplate_jetson_nano.FCStd
models/Circuitry_Mountingplate_modular/: Circuitry_Mountingplate_modular.FCStd  Circuitry_Mountingplate_modular.stl
models/Circuitry_Mountingplate_standoffs/: Circuitry_Mountingplate_standoffs.FCStd
models/Limb_Round_Servohorn_Mount/: Limb_Servohorn_Mount_long_v4.FCStd  Limb_Servohorn_Mount_long_v4.stl
models/Outer_Shoulder_round_servohorn/: Outer_Shoulder_round_servohorn.FCStd  Outer_Shoulder_round_servohorn.stl
models/Rear_Cover/: Rear_Cover_Plate_Medium.stl  Rear_Cover_Shell_Medium.FCStd
models/SpotMicroESP32_with_reinforced_shoulders_4937631/: LICENSE.txt  README.txt
models/SpotMicroESP32_with_reinforced_shoulders_4937631/files/: Limb_Top_Shell_with_BB_hole.stl  Rear_Cover_Plate_Medium.stl  Rear_Cover_Shell_Medium.FCStd  Rear_Cover_Shell_Medium.stl  Shoulder_Cover.stl  Shoulder_Joint_Ball_Bearing_Pin_M3x8.stl  Shoulder_Joint_Servo_Cap_Extended.stl  Shoulder_Joint_Servomount_extended_BB.stl
models/Wrist_35kg_servo/: Wrist.FCStd  Wrist.stl
models/bottom_cover/: Bottom_Cover_Split_Front.FCStd  Bottom_Cover_Split_Front.stl
models/circuit_carrier/: circuit_carrier  circuit_carrier.FCStd
models/face/: Front_Cover_oakdlite.FCStd  Front_Cover_oakdlite.stl  cameramount_rpi.FCStd  cameramount_rpi.stl  oakdlite_plate.FCStd  oakdlite_plate.stl
models/hitachi_lg_lidar_mount/: hitachi_lg_lidar_mount.FCStd  hitachi_lg_lidar_mount.stl
models/top_cover/: Top_Cover.FCStd  top_cover.stl  top_cover_back.stl  top_cover_front.stl
scripts/: docker_run.sh
