<?xml version="1.0"?>
<package format="2">
  <name>fennee_camera</name>
  <version>0.0.0</version>
  <description>The fennee_camera package</description>

  <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
  <author email="matt@aimatt.com">Matt Williamson</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <exec_depend>depthai</exec_depend>
  


  
</package>
