<?xml version="1.0"?>
<package format="2">
  <name>fennee_config</name>
  <version>0.1.0</version>
  <description>fennee Champ Config Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>rosserial_arduino</buildtool_depend> -->
  <!-- <buildtool_depend>rosserial</buildtool_depend> -->
  <exec_depend>champ_base</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  
</package>
