<?xml version="1.0"?>
<package format="2">
  <name>fennee_control</name>
  <version>0.0.0</version>
  <description>The fennee_control package</description>

  <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
  <author email="matt@aimatt.com">Matt Williamson</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <!-- https://github.com/ros/rosdistro/blob/master/rosdep/python.yaml -->
  <exec_depend>adafruit-pca9685-pip</exec_depend>
  <!-- adafruit_blinka -->

  
</package>
